--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
         </activity>
         <activity android:name=".GazzawiActivity" />
         <activity android:name=".KhalidActivity" />
-        <activity android:name=".khalidSecondActivity"></activity>
+        <activity android:name=".khalidSecondActivity" />
+        <activity android:name=".KThirdActivity"></activity>
     </application>
 
 </manifest>
